# cpp-cmake-boilerplate

./: CMakeLists.txt  README.md
cmake/: FindOCC.cmake
my-executable/: CMakeLists.txt
my-executable/src/: main.cpp
my-library/: CMakeLists.txt
my-library/include/: lib.h
my-library/src/: lib.cpp
